--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,10 +20,11 @@
     color: black;
   }
   
-  .topnav a.active {
-    background-color: #0ac880;
+  .topnav a.home {
+    background-color: rgba(12, 240, 65, 0.5);
     color: white;
   }
+
 body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
@@ -34,18 +35,18 @@ body {
 }
 
 .header {
-    height: 100vh;
+    height: 75vh;
     background-image: 
-    linear-gradient(to right bottom, 
-     rgba(12, 240, 65, 0.5),
-     rgba(30, 108, 217, 0.6)),
-     url("../Images/dog-4415649-18eab39206426b985f7a5f69e3146a2cd1a56c0d-s1200-c85.jpg");
+    linear-gradient(to right bottom,
+    rgba(12, 240, 65, 0.5),
+    rgba(30, 108, 217, 0.6)),
+    url("../Images/dog-4415649-18eab39206426b985f7a5f69e3146a2cd1a56c0d-s1200-c85.jpg");
     
   background-size: cover;
     background-position: top;
     position: relative;
 
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 50vh, 0 100%);
 }
 
 .text-box {
@@ -110,14 +111,6 @@ body {
     border-bottom: 2px solid #6ca40c;
   }
 
-  h3.purpose {
-    text-align: center;
-    color:#324412;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-style: italic;
-  }
-
   h3.dbi {
     text-align: center;
     color:#324412;
@@ -125,12 +118,12 @@ body {
     font-weight: bold;
   }
 
-  h3.upload {
+  /* h3.upload {
     text-align: center;
     color:#324412;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
-  }
+  } */
 
   h3.results {
     text-align: center;
@@ -155,12 +148,12 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
   }
 
-  p.upload_paragraph {
+  /* p.upload_paragraph {
     text-align: center;
     color: #456a03;
     font-size: 15px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-  }
+  } */
 
   p.have_fun {
     text-align: center;
@@ -169,7 +162,7 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
   }
 
-  form {
+  /* form {
     text-align: left;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-bottom: 5%;
@@ -189,8 +182,8 @@ body {
     padding-left: 5px;
     font-size: 15px;
     color: #324412;
-  }
+  } */
 
   footer {
-    margin-bottom: 360px;
+    margin-bottom: 26px;
   }
